# Computer_Science

./: alguns comandos
AULA01/: resumo.md
AULA02/: resumo.md
CALCULO_NUMERICO/: README.md
CALCULO_NUMERICO/conteudo01/: README.md
CALCULO_NUMERICO/conteudo02/: README.md
COMPILADORES/conteudo01/: README.md
COMPILADORES/conteudo02/: README.md
COMPUTACAO_GRAFICA/: README.md
COMPUTACAO_GRAFICA/conteudo01/: README.md
COMPUTACAO_GRAFICA/conteudo02/: README.md
Computacao_Gráfica/ComputacaoGrafica/: CMakeLists.txt  ComputacaoGrafica.cpp
INTELIGENCIA_ARTIFICIAL/: README.md
INTELIGENCIA_ARTIFICIAL/conteudo01/: README.md
INTELIGENCIA_ARTIFICIAL/conteudo02/: README.md
LFA/conteudo01/: README.md
LFA/conteudo02/: README.md
POO/conteudo01/: README.md
POO/conteudo02/: README.md
PROJETOS/: trabalho_final.md
REDES/conteudo01/: README.md
REDES/conteudo02/: README.md
SISTEMAS_OPERACIONAIS/: README.md
SISTEMAS_OPERACIONAIS/conteudo01/: README.md
SISTEMAS_OPERACIONAIS/conteudo02/: README.md
